[tool.poetry]
name = "cdba_scanner"
version = "0.1.0"
description = ""
authors = ["Alvin So <r.alvso@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scanner = {git = "https://github.com/alvstw/content-scanner.git", rev = "v0.1.1"}
PyInquirer = "^1.0.3"
typer = "^0.4.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
